fix: letter spacing in newspaper.css

--- a/newspaper.css
+++ b/newspaper.css
@@ -2,6 +2,10 @@
   margin: 0;
 }
 
+body {
+  font-size: 20px !important; 
+}
+
 .main {
   background-color: #FFFAF0 !important;
 }
@@ -54,10 +58,10 @@ a {
 .title {
   font-family: "EB Garamond", serif;
   font-optical-sizing: auto;
-  font-weight: 200;
+  font-weight: 400;
   font-style: normal;
   font-size: 4em;
-  letter-spacing: -0.04em;
+  letter-spacing: -0.02em;
 }
 
 ol {
@@ -69,10 +73,10 @@ ol {
 .paragraph {
   font-family: "EB Garamond", serif;
   font-optical-sizing: auto;
-  font-weight: 200;
+  font-weight: 400;
   font-style: normal;
   font-size: 1.5em;
-  letter-spacing: -0.04em;
+  letter-spacing: -0.02em;
 }
 
 li {
